tests/helium/screenshots/test_login_invalid_email_20251217_155820.txt
Test: test_login_invalid_email
Timestamp: 20251217_155820
Error:
Traceback (most recent call last):
  File "/Users/chiragdeora/Developer/production-scheduler/tests/helium/run.py", line 69, in run_single_test
    test_func()
  File "/Users/chiragdeora/Developer/production-scheduler/tests/helium/test_auth.py", line 121, in test_login_invalid_email
    driver.find_element_by_css_selector("button[type='submit']").click()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'WebDriver' object has no attribute 'find_element_by_css_selector'

